[gd_scene load_steps=13 format=2]

[ext_resource path="res://TILESET.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Energy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/music.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Super Grotto Escape Files/Environment/Layers/back.png" type="Texture" id=5]
[ext_resource path="res://Super Grotto Escape Files/Environment/Layers/far.png" type="Texture" id=6]
[ext_resource path="res://Super Grotto Escape Files/Props/Sprites/crate.png" type="Texture" id=7]
[ext_resource path="res://Super Grotto Escape Files/Props/Sprites/terminal.png" type="Texture" id=8]
[ext_resource path="res://Super Grotto Escape Files/Props/Sprites/back-panels.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Medal.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/World.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 103.25, 8.125 )

[node name="World" type="Node2D" groups=["World", "World2"]]
position = Vector2( 1, 0 )
script = ExtResource( 11 )

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 25, -57 )
texture = ExtResource( 5 )

[node name="Fondo2" type="Sprite" parent="."]
position = Vector2( 301, -57 )
texture = ExtResource( 5 )

[node name="Fondo5" type="Sprite" parent="."]
position = Vector2( 559, -56 )
texture = ExtResource( 5 )

[node name="Fondo7" type="Sprite" parent="."]
position = Vector2( 831, -56 )
texture = ExtResource( 5 )

[node name="Fondo8" type="Sprite" parent="."]
position = Vector2( 831, -251 )
texture = ExtResource( 5 )

[node name="Fondo6" type="Sprite" parent="."]
position = Vector2( 559, -251 )
texture = ExtResource( 5 )

[node name="Fondo3" type="Sprite" parent="."]
position = Vector2( 301, -251 )
texture = ExtResource( 5 )

[node name="Fondo4" type="Sprite" parent="."]
position = Vector2( 25, -251 )
texture = ExtResource( 5 )

[node name="Terminal" type="Sprite" parent="."]
position = Vector2( 105, -57 )
texture = ExtResource( 8 )

[node name="Back-panels" type="Sprite" parent="."]
position = Vector2( 532, -232 )
texture = ExtResource( 9 )

[node name="Far3" type="Sprite" parent="."]
position = Vector2( 504, -69 )
texture = ExtResource( 6 )
flip_h = true

[node name="Crate" type="Sprite" parent="Far3"]
position = Vector2( -257, 61 )
texture = ExtResource( 7 )

[node name="Crate" type="Sprite" parent="Far3/Crate"]
position = Vector2( 15, 0 )
texture = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 1, 0 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1179605, 12, 0, -1179603, 13, 0, -1048533, 14, 0, -1048531, 15, 0, -917461, 16, 0, -917459, 17, 0, -851939, 5, 0, -851937, 5, 0, -851935, 5, 0, -851933, 5, 0, -720905, 12, 0, -720903, 13, 0, -786389, 12, 0, -786387, 13, 0, -720869, 4, 0, -589833, 14, 0, -589831, 15, 0, -655335, 4, 0, -655334, 4, 0, -655320, 4, 0, -655319, 4, 0, -655317, 14, 0, -655315, 15, 0, -458761, 16, 0, -458759, 17, 0, -524245, 16, 0, -524243, 17, 0, -458730, 4, 0, -458729, 4, 0, -458713, 4, 0, -458712, 4, 0, -458711, 4, 0, -327689, 12, 0, -327687, 13, 0, -327682, 4, 0, -327681, 4, 0, -393216, 4, 0, -393215, 4, 0, -393214, 4, 0, -393204, 5, 0, -393202, 18, 0, -393200, 19, 0, -393198, 5, 0, -393178, 4, 0, -393173, 12, 0, -393172, 12, 0, -393171, 13, 0, -196617, 14, 0, -196615, 15, 0, -262118, 4, 0, -262117, 4, 0, -262111, 9, 0, -262101, 14, 0, -262099, 15, 0, -196603, 4, 0, -196602, 4, 0, -196601, 4, 0, -196600, 4, 0, -196599, 4, 0, -196585, 4, 0, -196584, 4, 0, -65545, 16, 0, -65543, 17, 0, -131039, 9, 0, -131029, 16, 0, -131027, 17, 0, 65528, 9, 0, 65529, 9, 0, 65530, 9, 0, 65531, 9, 0, 65532, 9, 0, 65533, 9, 0, 65534, 9, 0, 65535, 9, 0, 1, 9, 0, 3, 6, 0, 5, 6, 0, 6, 6, 0, 8, 6, 0, 10, 6, 0, 12, 536870917, 0, 14, 536870917, 0, 16, 536870917, 0, 18, 536870917, 0, 20, 6, 0, 22, 6, 0, 23, 6, 0, 24, 6, 0, 25, 6, 0, 26, 6, 0, 28, 6, 0, 30, 6, 0, 32, 6, 0, 33, 9, 0, 35, 6, 0, 36, 6, 0, 37, 6, 0, 38, 6, 0, 39, 6, 0, 40, 6, 0, 41, 6, 0, 42, 6, 0, 44, 9, 0, 45, 9, 0, 196600, 11, 0, 196602, 11, 0, 196604, 11, 0, 196606, 11, 0, 131072, 11, 0, 131074, 11, 0, 131075, 11, 0, 131077, 11, 0, 131079, 11, 0, 131081, 11, 0, 131083, 11, 0, 131085, 11, 0, 131086, 11, 0, 131088, 11, 0, 131090, 11, 0, 131092, 11, 0, 131093, 11, 0, 131094, 11, 0, 131095, 11, 0, 131096, 11, 0, 131097, 11, 0, 131098, 11, 0, 131099, 11, 0, 131100, 11, 0, 131101, 11, 0, 131102, 11, 0, 131103, 11, 0, 131105, 9, 0, 131116, 9, 0, 131117, 9, 0, 262177, 9, 0 )

[node name="StartPoint" type="Position2D" parent="."]
position = Vector2( 23, -22 )

[node name="Enemy" parent="." instance=ExtResource( 4 )]
position = Vector2( 205, -111 )

[node name="Enemy4" parent="." instance=ExtResource( 4 )]
position = Vector2( 312, -111 )

[node name="Enemy6" parent="." instance=ExtResource( 4 )]
position = Vector2( 307, -16 )

[node name="Enemy5" parent="." instance=ExtResource( 4 )]
position = Vector2( 666, -126 )

[node name="Enemy7" parent="." instance=ExtResource( 4 )]
position = Vector2( 539, -223 )

[node name="Enemy2" parent="." instance=ExtResource( 4 )]
position = Vector2( 144, -61 )

[node name="Enemy3" parent="." instance=ExtResource( 4 )]
position = Vector2( 38, -111 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0
autoplay = true

[node name="Lava" type="Area2D" parent="."]
position = Vector2( 111, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lava"]
position = Vector2( 10, 0 )
shape = SubResource( 1 )

[node name="Lava3" type="Area2D" parent="."]
position = Vector2( 111, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lava3"]
position = Vector2( 519, 0 )
shape = SubResource( 1 )

[node name="Lava2" type="Area2D" parent="."]
position = Vector2( 111, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lava2"]
position = Vector2( 313.75, 0 )
shape = SubResource( 1 )

[node name="Energy" parent="." instance=ExtResource( 2 )]
position = Vector2( 151, -57 )

[node name="Energy2" parent="." instance=ExtResource( 2 )]
position = Vector2( -21, -106 )

[node name="Energy3" parent="." instance=ExtResource( 2 )]
position = Vector2( 258, -106 )

[node name="Energy4" parent="." instance=ExtResource( 2 )]
position = Vector2( 545, -74 )

[node name="Area2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 532, -263 )

[connection signal="body_entered" from="Lava" to="." method="_on_Lava_body_entered"]
[connection signal="body_entered" from="Lava3" to="." method="_on_Lava_body_entered"]
[connection signal="body_entered" from="Lava2" to="." method="_on_Lava_body_entered"]
[connection signal="objetiu_assolit" from="Area2D" to="." method="_on_Area2D_objetiu_assolit"]
